--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ absl-py==2.2.2
 asgiref==3.8.1
 astunparse==1.6.3
 certifi==2025.4.26
+chardet==5.2.0
 charset-normalizer==3.4.1
 Django==5.2
 djangorestframework==3.16.0
@@ -40,6 +41,7 @@ pillow==11.2.1
 protobuf==5.29.4
 Pygments==2.19.1
 PyJWT==2.9.0
+reportlab==4.4.0
 requests==2.32.3
 rich==14.0.0
 six==1.17.0
